--- a/Features/Shared/Views/Header/_Header.cshtml
+++ b/Features/Shared/Views/Header/_Header.cshtml
@@ -32,7 +32,6 @@ else
 <header class="header @(Model.LayoutSettings.StickyTopHeader ? "sticky-top" : "")">
     <div class="header__wrapper">
         @*@Html.Partial("_MobileNavigation", Model)*@
-        @*@Html.Partial("_Navigation", Model)*@
-        @(await Component.InvokeAsync("Navigation", Model))
+        @(await Html.PartialAsync("_Navigation", Model))
     </div>
 </header>
